5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1712_2504.log
== TEST (2019-05-14 22:45:06) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())
gv = qv
gl = ql
t = 0
while(gl< 2*gv ):
	gl = gl + ((gl * pl)/100)
	gv = gv + ((gv * pv)/100)
	t = t+1
print(t)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:29) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())
gv = qv
gl = ql
t = 0
while(gl< 2*gv ):
	gl = gl + ((gl * pl)/100)
	gv = gv + ((gv * pv)/100)
	t = t+1
print(t)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:45:33) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())
gv = qv
gl = ql
t = 0
while(gl< 2*gv ):
	gl = gl + ((gl * pl)/100)
	gv = gv + ((gv * pv)/100)
	t = t+1
print(t)
-- EXECUTION TIME:
0.190801
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:46:04) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())
gv = qv
gl = ql
t = 0
while(gl< 2*gv ):
	gl = gl + ((gl * pl)/100)
	gv = gv + ((gv * pv)/100)
	t = t+1
print(t)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:19:35) 
-- CODE:
qi = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qi
qtl = qv
t = 0
while(ql < 2*qi):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtl = qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:20:12) 
-- CODE:
qi = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qi
qtl = ql
t = 0
while(ql < 2*qi):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtl = qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:20:25) 
-- CODE:
qi = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qi
qtl = ql
t = 0
while(ql < 2*qi):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtl = qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:22:50) 
-- CODE:
qi = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qi
qtl = ql
t = 0
while(ql < 2*qi):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- EXECUTION TIME:
141.962
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:23:13) 
-- CODE:
qv = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qv
qtl = ql
t = 0
while(ql < 2*qv):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtl = qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:23:44) 
-- CODE:
qv = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qv
qtl = ql
t = 0
while(qtl < 2*qtv):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:23:57) 
-- CODE:
qv = int(input("qtde de virus no sangue: "))
ql = int(input("qtde de leucocitos no sangue: "))
pv = float(input("percentual de virus  no sangue: "))
pl = float(input("percentual de leucocitos no sangue: "))
qtv = qv
qtl = ql
t = 0
while(qtl < 2*qtv):
	qtv = qtv + ((qtv * pv)/100)
	qtl = qtl + ((qtl * pl)/100)
	t= t+1
print(t)
-- EXECUTION TIME:
0.199873
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
